# dbx

./: index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish-packages.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/commands/: connection.rs  query.rs  schema.rs
src-tauri/src/db/: mod.rs  oracle_driver.rs
src-tauri/src/models/: connection.rs
src/components/connection/: ConnectionDialog.vue
src/components/editor/: DangerConfirmDialog.vue  QueryEditor.vue
src/components/grid/: DataGrid.vue
src/components/icons/: DatabaseIcon.vue
src/components/mongo/: JsonEditNode.vue  MongoDocBrowser.vue
src/components/redis/: RedisValueViewer.vue
src/components/sidebar/: TreeItem.vue
src/i18n/locales/: en.ts  zh-CN.ts
src/lib/: pinnedItems.ts  sqlFormatter.ts  tabCloseActions.ts
src/stores/: connectionStore.ts  queryStore.ts
src/types/: database.ts
tests/: pinnedItems.test.ts  sqlFormatter.test.ts  tabCloseActions.test.ts
